program committee and cfp

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <h1>Medical Cyber Physical Systems Workshop 2014</h1>
     <p class="lead">Medical Device Interoperability, Safety, and Security Assurance</p>
     <p class="lead">April 14th 2014 Berlin Germany</p>
-    <a href="http://www.seas.upenn.edu/~zhihaoj/MedCPS2014_cfp.pdf" target="_blank" class="btn btn-primary btn-large">PDF &raquo;</a> <a class="lead" href="http://www.seas.upenn.edu/~zhihaoj/MedCPS2014_cfp.pdf">  Call for Paper</a></p>
+    <a href="http://www.seas.upenn.edu/~zhihaoj/MedicalCPS.pdf" target="_blank" class="btn btn-primary btn-large">PDF &raquo;</a> <a class="lead" href="http://www.seas.upenn.edu/~zhihaoj/MedicalCPS.pdf">  Call for Paper</a></p>
     <!--<p>MLE+ is an open-source Matlab/Simulink toolbox for co-simulation with the whole-building energy simulator EnergyPlus. It is designed for engineers and researchers who are familiar with Matlab and Simulink and want to use these software tools in building energy simulation.</p>-->
     
     <!-- <p class="lead">MLE+ is a tool for energy-efficient building automation design, co-simulation and analysis.</p> --> 
@@ -249,7 +249,7 @@
           <div class="row">
             <div class="page-header">
               <h1>Call for Papers</h1>
-              <p>Call for papers[<a href="http://www.seas.upenn.edu/~zhihaoj/MedCPS2014_cfp.pdf">pdf</a>]</p>
+              <p>Call for papers[<a href="http://www.seas.upenn.edu/~zhihaoj/MedicalCPS.pdf">pdf</a>]</p>
             </div>
           </div> 
         </section>
@@ -308,12 +308,12 @@
                   </tbody>
               </table>
                   <h1>Program Commttee</h1>
-              <table width="618">
+              <table width="755">
                 <tbody>
                   <tr>
-                    <td>Martin Leucker</td>
-                    <td></td>
-                    <td><p>University of Lübeck, Germany</p></td>
+                    <td width="206">Martin Leucker</td>
+                    <td width="6"></td>
+                    <td width="442"><p>University of Lübeck, Germany</p></td>
                   </tr>
                   <tr>
                     <td>Maria Lindén</td>
@@ -349,6 +349,36 @@
                     <td>Alena Simalatsar</td>
                     <td></td>
                     <td><p>EPFL, Switzerland</p></td>
+                  </tr>
+                  <tr>
+                    <td>Wendy MacCaull</td>
+                    <td></td>
+                    <td>St Francis Xavier University, Canada</td>
+                  </tr>
+                  <tr>
+                    <td>Jane W. S. Liu</td>
+                    <td></td>
+                    <td> Institute of Information Science, Academia Sinica, Taiwan</td>
+                  </tr>
+                  <tr>
+                    <td>Arvind Easwaran</td>
+                    <td></td>
+                    <td>Nanyang Technological University, Singapore</td>
+                  </tr>
+                  <tr>
+                    <td>Scott A. Smolka</td>
+                    <td></td>
+                    <td>SUNY at Stony Brook, USA</td>
+                  </tr>
+                  <tr>
+                    <td>Sören Lewis</td>
+                    <td></td>
+                    <td>Otto Bock Healthcare, Germany</td>
+                  </tr>
+                  <tr>
+                    <td>Alan Wassyng</td>
+                    <td></td>
+                    <td>McMaster University, Canada</td>
                   </tr>
                   <tr>
                     <td>Stefan Fischer</td>
