--- a/index.html
+++ b/index.html
@@ -195,9 +195,14 @@
             <div class="page-header">
               <h1>Submission</h1>
             </div>
-            <p>Please email your paper in PDF format to <em><strong>Volker Turau: turau@tuhh.de, Marta Kwiatkowska: marta.kwiatkowska@cs.ox.ac.uk, Rahul Mangharam: rahulm@seas.upenn.edu</strong> </em>
- Please use the corresponding author's last name as   the file name. Example: Turau.pdf. </p>
-            <p>Papers should follow the two-column ACM Proceedings Format and be a maximum of eight (8) pages in length. Please refer to the <a href="http://www.acm.org/sigs/publications/proceedings-templates" target="_blank">ACM SIG Proceedings Template</a> page for paper templates in both Microsoft Word and LaTeX formats. LaTeX is the preferred template.<br>
+            <p>Authors are invited to submit papers by February 10th, 2014 (short papers 4
+              pages, full papers 6 pages) and posters by March 15th, 2014 via easychair.org. 
+              Papers should follow the two-column ACM Proceedings Format. Please refer to<br>
+              the ACM SIG Proceedings Template page for paper templates in both Microsoft
+              Word and LaTeX (preferred) formats. Submissions must be original and should
+              not have been published previously or be under consideration for publication<br>
+              while being evaluated for this workshop. More details about the submission
+            process can be found on the website.            <br>
             </p>
           </div>
          
