--- a/index.html
+++ b/index.html
@@ -277,9 +277,9 @@
                     <td>University of Oxford, UK</td>
                   </tr>
                   <tr>
-                    <td width="214"><a href="http://www.seas.upenn.edu/~rahulm/" target="_blank">Rahul Mangharam</a></td>
+                    <td width="220"><a href="http://www.seas.upenn.edu/~rahulm/" target="_blank">Rahul Mangharam</a></td>
                     <td width="10"></td>
-                    <td width="355">University of Pennsylvania, USA</td>
+                    <td>University of Pennsylvania, USA</td>
                   </tr>
                   
                   
@@ -290,9 +290,9 @@
               <table width="618">
                 <tbody>
                   <tr>
-                    <td width="180">Julian M. Goldman, MD</td>
-                    <td width="6"></td>
-                    <td width="333"><p></p>Massachusetts General Hospital, USA</p></td>
+                    <td width="220">Julian M. Goldman, MD</td>
+                    <td width="10"></td>
+                    <td><p></p>Massachusetts General Hospital, USA</p></td>
                   </tr>
                   <tr>
                     <td>Paul Jones</td>
@@ -317,9 +317,9 @@
               <table width="755">
                 <tbody>
                   <tr>
-                    <td width="206">Arvind Easwaran</td>
-                    <td width="6"></td>
-                    <td width="442">Nanyang Technological University, Singapore</td>
+                    <td width="220">Arvind Easwaran</td>
+                    <td width="10"></td>
+                    <td><p>Nanyang Technological University, Singapore</p></td>
                   </tr>
                   <tr>
                     <td>José Maria Fernandes</td>
@@ -339,7 +339,7 @@
                   <tr>
                     <td>Sören Lewis</td>
                     <td></td>
-                    <td>Otto Bock Healthcare, Germany</td>
+                    <td><p>Otto Bock Healthcare, Germany</p></td>
                   </tr>
                   <tr>
                     <td>Maria Lindén</td>
