--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <tbody>
               <tr>
                 <td>February 10th, 2014</td>
-                <td></td>
+                <td width="10"></td>
                 <td>Submission Deadline (Short, Full Papers)</td>
               </tr>
               <tr>
@@ -269,17 +269,17 @@
                 <tr>
                     <td><a href="http://www.ti5.tuhh.de/staff/turau/" target="_blank">Volker Turau</a></td>
                     <td></td>
-                    <td>Hamburg University of Technology, Germany</td>
+                    <td><p>Hamburg University of Technology, Germany</p></td>
                   </tr>
                   <tr>
                     <td><a href="marta.kwiatkowska@cs.ox.ac.uk" target="_blank">Marta Kwiatkowska</a></td>
                     <td></td>
-                    <td>University of Oxford, UK</td>
+                    <td><p>University of Oxford, UK</p></td>
                   </tr>
                   <tr>
                     <td width="220"><a href="http://www.seas.upenn.edu/~rahulm/" target="_blank">Rahul Mangharam</a></td>
                     <td width="10"></td>
-                    <td>University of Pennsylvania, USA</td>
+                    <td><p>University of Pennsylvania, USA</p></td>
                   </tr>
                   
                   
