--- a/index.html
+++ b/index.html
@@ -267,9 +267,9 @@
               <table width="595">
                 <tbody>
                 <tr>
-                    <td><a href="http://www.ti5.tuhh.de/staff/turau/" target="_blank">Volker Turau</a></td>
-                    <td></td>
-                    <td><p>Hamburg University of Technology, Germany</p></td>
+                    <td width="220"><a href="http://www.ti5.tuhh.de/staff/turau/" target="_blank">Volker Turau</a></td>
+                    <td width="10"></td>
+                    <td width="500"><p>Hamburg University of Technology, Germany</p></td>
                   </tr>
                   <tr>
                     <td><a href="marta.kwiatkowska@cs.ox.ac.uk" target="_blank">Marta Kwiatkowska</a></td>
@@ -277,8 +277,8 @@
                     <td><p>University of Oxford, UK</p></td>
                   </tr>
                   <tr>
-                    <td width="220"><a href="http://www.seas.upenn.edu/~rahulm/" target="_blank">Rahul Mangharam</a></td>
-                    <td width="10"></td>
+                    <td><a href="http://www.seas.upenn.edu/~rahulm/" target="_blank">Rahul Mangharam</a></td>
+                    <td></td>
                     <td><p>University of Pennsylvania, USA</p></td>
                   </tr>
                   
@@ -292,7 +292,7 @@
                   <tr>
                     <td width="220">Julian M. Goldman, MD</td>
                     <td width="10"></td>
-                    <td><p></p>Massachusetts General Hospital, USA</p></td>
+                    <td width="500"><p></p>Massachusetts General Hospital, USA</p></td>
                   </tr>
                   <tr>
                     <td>Paul Jones</td>
@@ -319,7 +319,7 @@
                   <tr>
                     <td width="220">Arvind Easwaran</td>
                     <td width="10"></td>
-                    <td><p>Nanyang Technological University, Singapore</p></td>
+                    <td width="500"><p>Nanyang Technological University, Singapore</p></td>
                   </tr>
                   <tr>
                     <td>José Maria Fernandes</td>
