--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 <tr>
                     <td width="220"><a href="http://www.ti5.tuhh.de/staff/turau/" target="_blank">Volker Turau</a></td>
                     <td width="10"></td>
-                    <td width="500"><p>Hamburg University of Technology, Germany</p></td>
+                    <td width="600"><p>Hamburg University of Technology, Germany</p></td>
                   </tr>
                   <tr>
                     <td><a href="marta.kwiatkowska@cs.ox.ac.uk" target="_blank">Marta Kwiatkowska</a></td>
@@ -292,17 +292,17 @@
                   <tr>
                     <td width="220">Julian M. Goldman, MD</td>
                     <td width="10"></td>
-                    <td width="500"><p></p>Massachusetts General Hospital, USA</p></td>
+                    <td width="600"><p>Massachusetts General Hospital, USA</p></td>
                   </tr>
                   <tr>
                     <td>Paul Jones</td>
                     <td></td>
-                    <td><p></p>U.S. Food &amp; Drug Admin. (FDA), USA</p></td>
+                    <td><p>U.S. Food &amp; Drug Admin. (FDA), USA</p></td>
                   </tr>
                   <tr>
                     <td>Insup Lee (Chair)</td>
                     <td></td>
-                    <td><p></p>University of Pennsylvania, USA</p></td>
+                    <td><p>University of Pennsylvania, USA</p></td>
                   </tr>
                   <tr>
                     <td>Sandy Weininger</td>
@@ -319,7 +319,7 @@
                   <tr>
                     <td width="220">Arvind Easwaran</td>
                     <td width="10"></td>
-                    <td width="500"><p>Nanyang Technological University, Singapore</p></td>
+                    <td width="600"><p>Nanyang Technological University, Singapore</p></td>
                   </tr>
                   <tr>
                     <td>José Maria Fernandes</td>
