--- a/index.html
+++ b/index.html
@@ -203,7 +203,11 @@
               ACM SIG Proceedings Template page</a> for paper templates in both Microsoft
               Word and LaTeX (preferred) formats. Submissions must be original and should
               not have been published previously or be under consideration for publication
-              while being evaluated for this workshop.<br>
+              while being evaluated for this workshop.
+            </p>
+            <p>
+              Request to publish workshop papers in the open access OASIcs series
+              (Dagstuhl series) is pending.
             </p>
           </div>
          
@@ -267,17 +271,17 @@
               <table width="595">
                 <tbody>
                 <tr>
-                    <td width="220"><a href="http://www.ti5.tuhh.de/staff/turau/" target="_blank">Volker Turau</a></td>
+                    <td width="220"><p><a href="http://www.ti5.tuhh.de/staff/turau/" target="_blank">Volker Turau</a></p></td>
                     <td width="10"></td>
                     <td width="600"><p>Hamburg University of Technology, Germany</p></td>
                   </tr>
                   <tr>
-                    <td><a href="marta.kwiatkowska@cs.ox.ac.uk" target="_blank">Marta Kwiatkowska</a></td>
+                    <td><p><a href="http://www.cs.ox.ac.uk/marta.kwiatkowska/" target="_blank">Marta Kwiatkowska</a></p></td>
                     <td></td>
                     <td><p>University of Oxford, UK</p></td>
                   </tr>
                   <tr>
-                    <td><a href="http://www.seas.upenn.edu/~rahulm/" target="_blank">Rahul Mangharam</a></td>
+                    <td><p><a href="http://www.seas.upenn.edu/~rahulm/" target="_blank">Rahul Mangharam</a></p></td>
                     <td></td>
                     <td><p>University of Pennsylvania, USA</p></td>
                   </tr>
@@ -290,22 +294,22 @@
               <table width="618">
                 <tbody>
                   <tr>
-                    <td width="220">Julian M. Goldman, MD</td>
+                    <td width="220"><p>Julian M. Goldman, MD</p></td>
                     <td width="10"></td>
                     <td width="600"><p>Massachusetts General Hospital, USA</p></td>
                   </tr>
                   <tr>
-                    <td>Paul Jones</td>
+                    <td><p>Paul Jones</p></td>
                     <td></td>
                     <td><p>U.S. Food &amp; Drug Admin. (FDA), USA</p></td>
                   </tr>
                   <tr>
-                    <td>Insup Lee (Chair)</td>
+                    <td><p>Insup Lee (Chair)</p></td>
                     <td></td>
                     <td><p>University of Pennsylvania, USA</p></td>
                   </tr>
                   <tr>
-                    <td>Sandy Weininger</td>
+                    <td><p>Sandy Weininger</p></td>
                     <td></td>
                     <td><p>U.S. Food &amp; Drug Admin. (FDA), USA</p></td>
                   </tr>
@@ -330,6 +334,11 @@
                     <td>Stefan Fischer</td>
                     <td></td>
                     <td><p>University of Lübeck, Germany</p></td>
+                  </tr>
+                  <tr>
+                    <td>Radu Grosu</td>
+                    <td></td>
+                    <td><p>Vienna University of Technology, Austria</p></td>
                   </tr>
                   <tr>
                     <td>Martin Leucker</td>
