--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
           <div class="row">
             <div class="page-header">
               <h1>Call for Papers</h1>
-              <p>Call for papers[<a href="http://www.seas.upenn.edu/~zhihaoj/MedicalCPS.pdf">pdf</a>]</p>
+              <p>Call for papers [<a href="http://projects.ti5.tu-harburg.de/MedicalCPS.pdf">pdf</a>]</p>
             </div>
           </div> 
         </section>
