--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
   <div class="container">
     <h1>Medical Cyber Physical Systems Workshop 2014</h1>
     <p class="lead">Medical Device Interoperability, Safety, and Security Assurance</p>
-    <p class="lead">April 14th 2014 Berlin Germany</p>
-    <a href="http://www.seas.upenn.edu/~zhihaoj/MedicalCPS.pdf" target="_blank" class="btn btn-primary btn-large">PDF &raquo;</a> <a class="lead" href="http://www.seas.upenn.edu/~zhihaoj/MedicalCPS.pdf">  Call for Paper</a></p>
-    <!--<p>MLE+ is an open-source Matlab/Simulink toolbox for co-simulation with the whole-building energy simulator EnergyPlus. It is designed for engineers and researchers who are familiar with Matlab and Simulink and want to use these software tools in building energy simulation.</p>-->
-    
-    <!-- <p class="lead">MLE+ is a tool for energy-efficient building automation design, co-simulation and analysis.</p> --> 
+    <p class="lead">April 14th, 2014 &ndash; Berlin, Germany</p>
+    <p>
+      <a href="http://projects.ti5.tu-harburg.de/MedicalCPS.pdf" target="_blank" class="btn btn-primary btn-large">PDF &raquo;</a>
+      <a class="lead" href="http://projects.ti5.tu-harburg.de/MedicalCPS.pdf">  Call for Paper</a>
+    </p>
   </div>
 </header>
 
