--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             </div>
             <p>
               Authors are invited to submit papers by February 10th, 2014 (short papers 6-8 pages,
-              full papers 10-14 pages) and posters by March 15th, 2014 via 
+              full papers 10-14 pages in A4 format) and posters by March 15th, 2014 via 
               <a href="https://www.easychair.org/conferences/?conf=medicalcps2014">Easychair</a>.
               Papers should prepare their papers using LaTeX and the
               <a href="http://drops.dagstuhl.de/styles/oasics/oasics-authors.tgz">OASIcs style file</a>.
