--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
               <a href="http://drops.dagstuhl.de/styles/oasics/oasics-authors.tgz">OASIcs style file</a>.
               Submissions must be original and should not have been published previously or be
               under consideration for publication while being evaluated for this workshop.
-              All acccepted papers will be included in the workshop proceedings published
+              All accepted papers will be included in the workshop proceedings published
               in the open access 
               <a href="http://www.dagstuhl.de/en/publications/oasics">OASIcs series</a>
               (Dagstuhl series).
