--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
             <table>
             <tbody>
               <tr>
-                <td>February 24th, 2014</td>
+                <td><b>February 24th, 2014</b></td>
                 <td width="10"></td>
-                <td>Submission Deadline (Short, Full Papers)</td>
+                <td><b>Extended Submission Deadline (Short, Full Papers)</b></td>
               </tr>
               <tr>
                 <td>March 15th, 2014</td>
@@ -196,7 +196,7 @@
               <h1>Submission</h1>
             </div>
             <p>
-              Authors are invited to submit papers by February 10th, 2014 (short papers 6-8 pages,
+              Authors are invited to submit papers by February 24th, 2014 (short papers 6-8 pages,
               full papers 10-14 pages in A4 format) and posters by March 15th, 2014 via 
               <a href="https://www.easychair.org/conferences/?conf=medicalcps2014">Easychair</a>.
               Papers should prepare their papers using LaTeX and the
