--- a/index.html
+++ b/index.html
@@ -163,12 +163,12 @@
                 <td>Submission Deadline (Posters)</td>
               </tr>
               <tr>
-                <td>March  3rd, 2014</td>
+                <td><strike style="color:ff0000">March  3rd, 2014</strike> <b>March  14rd, 2014</b></td>
                 <td></td>
                 <td>Notification </td>
               </tr>
               <tr>
-                <td>March 17th, 2014</td>
+                <td><strike style="color:ff0000">March 17th, 2014</strike> <b>March  21rd, 2014</b></td>
                 <td></td>
                 <td>Camera Submission Due</td>
               </tr>
