--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <td><b>Extended Submission Deadline (Short, Full Papers)</b></td>
               </tr>
               <tr>
-                <td>March 15th, 2014</td>
+                <td><strike>March 15th, 2014</strike> <b>March 18th, 2014</b></td>
                 <td></td>
                 <td>Submission Deadline (Posters)</td>
               </tr>
