--- a/index.html
+++ b/index.html
@@ -209,8 +209,33 @@
               <a href="http://www.dagstuhl.de/en/publications/oasics">OASIcs series</a>
               (Dagstuhl series).
             </p>
+            <p>
+            	Further instructions for the camera ready version:
+            	<ul>
+            		<il>Use further LaTeX packages only if required.</li>
+			<li>Provide full author names (especially with regard to the first name) in the
+			    <tt>\author</tt> macro and in the <tt>\Copyright</tt> macro.
+			<li>Fill out the <tt>\subjclass</tt> and <tt>\keywords</tt> macros. For the <tt>\subjclass</tt>,
+			    please refer to the ACM classification at 
+			    <a href="http://www.acm.org/about/class/ccs98-html">
+			    http://www.acm.org/about/class/ccs98-html</a>.</li>
+			<li>Take care of suitable linebreaks and pagebreaks. No overfull <tt>\hboxes</tt> should
+			    occur in the warnings log.</li>
+			<li>Provide suitable graphics of at least 300dpi (preferrably in pdf format).</li>
+			<li>Keep the standard style (plain) for the bibliography as provided by the
+			    <tt>oasics.cls</tt> style file.</li>
+			<li>Use BibTex and provide exactly one BibTex file for your article. The BibTex file should
+			    contain only entries that are referenced in the article. Please make sure that there
+			    are no errors and warnings with the referenced BibTex entries.</li>
+			<li>A manual for the OASIcs style is available at
+			    <a href="http://drops.dagstuhl.de/styles/oasics/oasics-authors/oasics-manual.pdf">
+			    http://drops.dagstuhl.de/styles/oasics/oasics-authors/oasics-manual.pdf</a>.</il>
+            	</ul>
+            	Please send your camera ready version as PDF and ZIP file including all your LaTeX files
+            	(including figures, bibliography, ...) until <b>Friday 21.3.2014</b> to
+            	<a href="mailto:c.weyer@tuhh.de">c.weyer@tuhh.de</a>.
+            </p>
           </div>
-         
         </section>
         
         <section id="venue">
