--- a/index.html
+++ b/index.html
@@ -425,6 +425,11 @@
                     <td><p>Hamburg University of Technology, Germany</p></td>
                   </tr>
                   <tr>
+                    <td>Andreas Timm-Giel</td>
+                    <td></td>
+                    <td><p>Hamburg University of Technology, Germany</p></td>
+                  </tr>
+                  <tr>
                     <td>Alan Wassyng</td>
                     <td></td>
                     <td><p>McMaster University, Canada</p></td>
