--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 	  <li class=""><a href="#Submission"><i class="icon-chevron-right"></i> Submission</a></li>
           <li class=""><a href="#venue"><i class="icon-chevron-right"></i> Venue</a></li>
           <li class=""><a href="#registration"><i class="icon-chevron-right"></i> Registration</a></li>
-        <!--  <li class=""><a href="#program"><i class="icon-chevron-right"></i> Technical Program</a></li>
-          <li class=""><a href="#publication"><i class="icon-chevron-right"></i>Accepted Papers</a></li> -->
+          <li class=""><a href="#program"><i class="icon-chevron-right"></i> Program</a></li>
+        <!--  <li class=""><a href="#publication"><i class="icon-chevron-right"></i>Accepted Papers</a></li> -->
           <li class=""><a href="#cfp"><i class="icon-chevron-right"></i> Call for Paper</a></li>
           <li class=""><a href="#committee"><i class="icon-chevron-right"></i> Workshop Committee</a></li>
         <!--  <li class=""><a href="#participants"><i class="icon-chevron-right"></i> Workshop Participants</a></li>-->
@@ -231,9 +231,6 @@
 			    <a href="http://drops.dagstuhl.de/styles/oasics/oasics-authors/oasics-manual.pdf">
 			    http://drops.dagstuhl.de/styles/oasics/oasics-authors/oasics-manual.pdf</a>.</il>
             	</ul>
-            	Please send your camera ready version as PDF and ZIP file including all your LaTeX files
-            	(including figures, bibliography, ...) until <b>Friday 21.3.2014</b> to
-            	<a href="mailto:c.weyer@tuhh.de">c.weyer@tuhh.de</a>.
             </p>
           </div>
         </section>
@@ -259,15 +256,20 @@
           
         </section>
         </section>
-<!--<section id="program">
+<section id="program">
           <div class="row">
             <div class="page-header">
-              <h1>Technical Program</h1>
-              <p><strong>TBA</strong>            </p>
+              <h1>Program</h1>
+		<p>
+			The
+			<a href="http://projects.ti5.tu-harburg.de/MedicalCPS.pdf" target="_blank">final program</a>
+			is now available. The duration for presenting a long paper is 20 minutes, plus 10 minutes
+			for questions and answers. For short papers the presentation is 10 minutes plus 5 minutes. 
+		</p>
             </div>
           </div> 
          </section>
-         
+<!--         
          <section id="publication">
           <div class="row">
             <div class="page-header">
