--- a/index.html
+++ b/index.html
@@ -262,9 +262,9 @@
               <h1>Program</h1>
 		<p>
 			The
-			<a href="http://projects.ti5.tu-harburg.de/MedicalCPS.pdf" target="_blank">final program</a>
+			<a href="http://projects.ti5.tu-harburg.de/program.pdf" target="_blank">final program</a>
 			is now available. The duration for presenting a long paper is 20 minutes, plus 10 minutes
-			for questions and answers. For short papers the presentation is 10 minutes plus 5 minutes. 
+			for questions and answers. For short papers the presentation time is 10 minutes plus 5 minutes. 
 		</p>
             </div>
           </div> 
