--- a/index.html
+++ b/index.html
@@ -77,10 +77,6 @@
     <h1>Medical Cyber Physical Systems Workshop 2014</h1>
     <p class="lead">Medical Device Interoperability, Safety, and Security Assurance</p>
     <p class="lead">April 14th, 2014 &ndash; Berlin, Germany</p>
-    <p>
-      <a href="http://projects.ti5.tu-harburg.de/MedicalCPS.pdf" target="_blank" class="btn btn-primary btn-large">PDF &raquo;</a>
-      <a class="lead" href="http://projects.ti5.tu-harburg.de/MedicalCPS.pdf">  Call for Paper</a>
-    </p>
   </div>
 </header>
 
@@ -100,7 +96,7 @@
           <li class=""><a href="#registration"><i class="icon-chevron-right"></i> Registration</a></li>
           <li class=""><a href="#program"><i class="icon-chevron-right"></i> Program</a></li>
         <!--  <li class=""><a href="#publication"><i class="icon-chevron-right"></i>Accepted Papers</a></li> -->
-          <li class=""><a href="#cfp"><i class="icon-chevron-right"></i> Call for Paper</a></li>
+          <!-- <li class=""><a href="#cfp"><i class="icon-chevron-right"></i> Call for Paper</a></li> -->
           <li class=""><a href="#committee"><i class="icon-chevron-right"></i> Workshop Committee</a></li>
         <!--  <li class=""><a href="#participants"><i class="icon-chevron-right"></i> Workshop Participants</a></li>-->
           <li class=""><a href="http://workshop.medcps.org/2013"><i class="icon-chevron-right"></i> 2013 Workshop</a></li>
@@ -281,14 +277,15 @@
          
         </section>
  -->
- 	<section id="cfp">
+ <!--	<section id="cfp">
           <div class="row">
             <div class="page-header">
               <h1>Call for Papers</h1>
-              <p>Call for papers [<a href="http://projects.ti5.tu-harburg.de/MedicalCPS.pdf">pdf</a>]</p>
+              <p>Call for papers [<a href="http://MedicalCPS.pdf">pdf</a>]</p>
             </div>
           </div> 
         </section>
+ -->
         
         <section id="committee">
           <div class="row">
