--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <li class=""><a href="#program"><i class="icon-chevron-right"></i> Program</a></li>
         <!--  <li class=""><a href="#publication"><i class="icon-chevron-right"></i>Accepted Papers</a></li> -->
           <!-- <li class=""><a href="#cfp"><i class="icon-chevron-right"></i> Call for Paper</a></li> -->
-          <li class=""><a href="#chair"><i class="icon-chevron-right"></i> Workshop Cochairs</a></li>
+          <li class=""><a href="#chair"><i class="icon-chevron-right"></i> Organizing Committee</a></li>
           <li class=""><a href="#committee"><i class="icon-chevron-right"></i> Steering Committee</a></li>
         <!--  <li class=""><a href="#participants"><i class="icon-chevron-right"></i> Workshop Participants</a></li>-->
           <li class=""><a href="http://workshop.medcps.org/2014"><i class="icon-chevron-right"></i> 2014 Workshop</a></li>
