--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@
               <h1>Call for Papers</h1>
               <p>Call for papers [<a href="MedicalCPS.pdf" target="_blank">pdf</a>]</p>
               <p>Authors  are invited to submit papers by February 20th, 2015 (short papers 4-6 pages,  full papers 8 -10 pages) and posters by March 15th, 2015.</p>
-              <p><strong>Submit your papers via EasyChair - <a href="https://easychair.org/conferences/?conf=medicalcps2015" target="_blank">https://easychair.org/conferences/?conf=medicalcps2015</a></strong><a href="https://easychair.org/conferences/?conf=medicalcps2015" target="_blank"></a></p>
-              <p>Papers should prepare their papers using LaTeX and the ACM style file.  Submissions must be original and should not have been published previously or  be under consideration for publication while being evaluated for this workshop. </p>
+              <p><strong>Submit your papers via EasyChair - <a href="https://easychair.org/conferences/?conf=medicalcps2015" target="_blank">https://easychair.org/conferences/?conf=medicalcps2015</a></strong></p>
+              <p>Authors should prepare their papers using LaTeX and the ACM style file.  Submissions must be original and should not have been published previously or  be under consideration for publication while being evaluated for this workshop. </p>
               <p>All  accepted papers will be published in the SIGBED Review newsletter. By  submitting to the workshop the authors are granting permission for ACM to  publish in print and digital formats for the newsletter and the ACM archive.  The copyright for papers appearing in the proceedings remains with authors.</p>
             </div>
           </div> 
