--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <title>Medical Cyber Physical Systems Workshop 2015</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
@@ -109,6 +109,7 @@
           <li class=""><a href="#program"><i class="icon-chevron-right"></i> Program</a></li>
         <!--  <li class=""><a href="#publication"><i class="icon-chevron-right"></i>Accepted Papers</a></li> -->
           <!-- <li class=""><a href="#cfp"><i class="icon-chevron-right"></i> Call for Paper</a></li> -->
+          <li class=""><a href="#program"><i class="icon-chevron-right"></i> Workshop Program</a></li>
           <li class=""><a href="#chair"><i class="icon-chevron-right"></i> Organizing Committee</a></li>
           <li class=""><a href="#committee"><i class="icon-chevron-right"></i> Steering Committee</a></li>
         <!--  <li class=""><a href="#participants"><i class="icon-chevron-right"></i> Workshop Participants</a></li>-->
@@ -299,8 +300,14 @@
             </div>
           </div> 
         </section>
-        
-        <section id="chair">
+        <section id="program">
+          <div class="row">
+            <div class="page-header">
+        <iframe src="https://docs.google.com/document/d/1U7TtapCkZcf4CNqoWaM4_JFX_jbSqL0kJHBxPbVnfHg/pub?embedded=true" width="600" height="700"></iframe>
+       </div>
+          </div>  
+          </section>
+ <section id="chair">
           <div class="row">
             <div class="page-header">
               <h1>Workshop Co-Chairs</h1>
