--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
           <!-- <li class=""><a href="#cfp"><i class="icon-chevron-right"></i> Call for Paper</a></li> -->
           <li class=""><a href="#program"><i class="icon-chevron-right"></i> Workshop Program</a></li>
           <li class=""><a href="#key1"><i class="icon-chevron-right"></i> Morning Keynote</a></li>
+          <li class=""><a href="#key2"><i class="icon-chevron-right"></i> Afternoon Keynote</a></li>
           <li class=""><a href="#chair"><i class="icon-chevron-right"></i> Organizing Committee</a></li>
           <li class=""><a href="#committee"><i class="icon-chevron-right"></i> Steering Committee</a></li>
           <li class=""><a href="#attend"><i class="icon-chevron-right"></i> Workshop Attendees
@@ -317,6 +318,14 @@
             <div class="page-header">
             <h1>Morning Keynote</h1>
         <iframe src="https://docs.google.com/document/d/1uxOJaIky3vTnYSQB9mFvLsjx_eeVcHzSrWotOo3__mM/pub?embedded=true" width="600" height="700"></iframe>
+       </div>
+          </div>  
+          </section>
+          <section id="key2">
+          <div class="row">
+            <div class="page-header">
+            <h1>Afternoon Keynote</h1>
+        <iframe src="https://docs.google.com/document/d/1DFJej48ngdPu3XI1cwxgYjB4saCGQ3r645eMHBEOHlM/pub?embedded=true" width="600" height="700"></iframe>
        </div>
           </div>  
           </section>
