--- a/2014.html
+++ b/2014.html
@@ -103,7 +103,7 @@
           <li class=""><a href="#cfp"><i class="icon-chevron-right"></i> Call for Paper</a></li>
           <li class=""><a href="#committee"><i class="icon-chevron-right"></i> Workshop Committee</a></li>
         <!--  <li class=""><a href="#participants"><i class="icon-chevron-right"></i> Workshop Participants</a></li>-->
-          <li class=""><a href="http://workshop.medcps.org/2013"><i class="icon-chevron-right"></i> 2013 Workshop</a></li>
+          <li class=""><a href="http://mlab.github.io/medcps_workshop/2013"><i class="icon-chevron-right"></i> 2013 Workshop</a></li>
         </ul>
       </div> <!-- span3 -->
       
