--- a/index.html
+++ b/index.html
@@ -361,13 +361,15 @@
               <ul>
                   <li><a href="http://www.mdpnp.org/team.html">David Arney</a>, University  of Pennsylvania, USA</li>
                   <li><a href="http://www.eziobartocci.com/">Ezio Bartocci</a>, Vienna University of Technology, Austria</li>
-                  <li><a>Marco Beccani</a>, University  of Pennsylvania, USA</li>
+                  <li><a>Marco Beccani</a>, University of Pennsylvania, USA</li>
                   <li><a href="http://thevirtualheart.org/FentonCherry/fenton.html">Flavio H. Fenton</a>, Georgia Institute of Technology, USA</li>
                   <li><a href="https://www.isp.uni-luebeck.de/leucker">Martin Leucker</a>, University of Lübeck, Germany</li>
                   <li><a href="https://sites.google.com/site/pmoorebio/">Philip T Moore</a>, Lanzhou University, China</li>
+                  <li><a href="https://www.cs.ox.ac.uk/people/nicola.paoletti/">Nicola Paoletti</a>, University of Oxford, UK</li>
                   <li><a href="http://www3.cs.stonybrook.edu/~sas/">Scott. A. Smolka</a>, Stony Brook University, USA</li>
                   <li><a href="http://www.cis.upenn.edu/~sokolsky/">Oleg Sokolsky</a>, University of Pennsylvania, USA</li>
                   <li><a href="http://www.ti5.tu-harburg.de/staff/turau/">Volker Turau</a>, University of Pennsylvania, USA</li>
+                  <li><a href="http://engineering.vanderbilt.edu/me/faculty-staff/pietro-valdastri.php">Pietro Valdastri</a>, University of Pennsylvania, USA</li>
                   <li><a href="http://hibou.cs.wpi.edu/~kven/wordpress/">Krishna Venkatasubramanian</a>, Worcester Polytechnic Institute, USA</li>
               </ul>
             </div>
