--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@
               <ul>
                   <li><a href="http://engineering.vanderbilt.edu/me/faculty-staff/pietro-valdastri.php">Pietro Valdastri</a>, Vanderbilt University, USA</li>
                   <li><a href="http://www.draeger-msi.de/startseite/">Stefan Schlichting</a>, Dräger Safety MSI Gmb, Germany</li>
+                  <li><a href="http://www3.cs.stonybrook.edu/~sas/">Scott. A. Smolka</a>, Stony Brook University, USA</li>
               </ul>
             </div>
               </div>
