--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
             <div class="page-header">
               <h1>Invited Speakers (confirmed)</h1>
               <ul>
-                  <li><a href="http://www.draeger-msi.de/startseite/">Stefan Schlichting</a>, Dräger Safety MSI Gmb, Germany</li>
+                  <li><a href="http://www.draeger-msi.de/home/?L=1">Stefan Schlichting</a>, Dräger Safety MSI Gmb, Germany</li>
                   <li><a href="http://www3.cs.stonybrook.edu/~sas/">Scott. A. Smolka</a>, Stony Brook University, USA</li>
                   <li><a href="http://engineering.vanderbilt.edu/me/faculty-staff/pietro-valdastri.php">Pietro Valdastri</a>, Vanderbilt University, USA</li>
               </ul>
@@ -352,7 +352,7 @@
               <h1>Workshop Co-Chairs</h1>
               <p>This year&rsquo;s  workshop will be hosted by:</p>
               <ul>
-                <li><a href="http://www.eziobartocci.com/">Ezio Bartocci</a>, Vienna University of Technology, Austria</li>
+                <li><a href="http://www.eziobartocci.com/">Ezio Bartocci</a>, TU Wien, Austria</li>
                 <li><a href="https://www.isp.uni-luebeck.de/leucker">Martin Leucker</a>, University of Lübeck, Germany</li>
               </ul>
               
@@ -370,7 +370,7 @@
               <h1>Program Committee</h1>
               <ul>
                   <li><a href="http://www.mdpnp.org/team.html">David Arney</a>, University  of Pennsylvania, USA</li>
-                  <li><a href="http://www.eziobartocci.com/">Ezio Bartocci</a>, Vienna University of Technology, Austria</li>
+                  <li><a href="http://www.eziobartocci.com/">Ezio Bartocci</a>, TU Wien, Austria</li>
                   <li><a>Marco Beccani</a>, University of Pennsylvania, USA</li>
                   <li><a href="http://thevirtualheart.org/FentonCherry/fenton.html">Flavio H. Fenton</a>, Georgia Institute of Technology, USA</li>
                   <li><a href="https://www.isp.uni-luebeck.de/leucker">Martin Leucker</a>, University of Lübeck, Germany</li>
