--- a/index.html
+++ b/index.html
@@ -99,20 +99,20 @@
         <!-- <ul class="nav nav-list bs-docs-sidenav affix"> -->
           
 	  <li class="active"><a href="#introduction"><i class="icon-chevron-right"></i> Introduction</a></li>
+	 <li class=""><a href="#cfp"><i class="icon-chevron-right"></i> Call for Paper</a></li>
 	  <li class=""><a href="#dates"><i class="icon-chevron-right"></i> Important dates</a></li>
-	  <li class=""><a href="#cfp"><i class="icon-chevron-right"></i> Call for paper</a></li>
+
         <!--  <li class=""><a href="#venue"><i class="icon-chevron-right"></i> Venue</a></li>
           <li class=""><a href="#registration"><i class="icon-chevron-right"></i> Registration</a></li>
           <li class=""><a href="#program"><i class="icon-chevron-right"></i> Program</a></li>
-        <!--  <li class=""><a href="#publication"><i class="icon-chevron-right"></i>Accepted Papers</a></li> -->
-          <!-- <li class=""><a href="#cfp"><i class="icon-chevron-right"></i> Call for Paper</a></li> -->
+         <li class=""><a href="#publication"><i class="icon-chevron-right"></i>Accepted Papers</a></li> -->
           <li class=""><a href="#program"><i class="icon-chevron-right"></i> Workshop Program</a></li>
-          <li class=""><a href="#key1"><i class="icon-chevron-right"></i> Morning Keynote</a></li>
-          <li class=""><a href="#key2"><i class="icon-chevron-right"></i> Afternoon Keynote</a></li>
+          <!-- <li class=""><a href="#key1"><i class="icon-chevron-right"></i> Morning Keynote</a></li>
+          <li class=""><a href="#key2"><i class="icon-chevron-right"></i> Afternoon Keynote</a></li>-->
           <li class=""><a href="#invited"><i class="icon-chevron-right"></i> Invited Speakers</a></li>
           <li class=""><a href="#chair"><i class="icon-chevron-right"></i> Organizing Committee</a></li>
           <li class=""><a href="#committee"><i class="icon-chevron-right"></i> Steering Committee</a></li>
-          <li class=""><a href="#attend"><i class="icon-chevron-right"></i> Workshop Attendees
+          <!-- <li class=""><a href="#attend"><i class="icon-chevron-right"></i> Workshop Attendees -->
 </a></li>
         <!--  <li class=""><a href="#participants"><i class="icon-chevron-right"></i> Workshop Participants</a></li>-->
           <li class=""><a href="http://mlab.github.io/medcps_workshop/2014"><i class="icon-chevron-right"></i> 2014 Workshop</a></li>
@@ -400,16 +400,15 @@
         </section>
 
           
-          <section id="attend">
+         <!-- <section id="attend">
           <div class="row">
             <div class="page-header">
             <h1>Workshop Attendees</h1>
             <p> To be announced</p>
-        <!-- <iframe src="https://docs.google.com/spreadsheets/d/1urjyUKTPV2ooHPD0kq5S-JwO0ORF1-kX_o6WJA18uaY/pubhtml?gid=922358210&amp;single=true&amp;widget=true&amp;headers=false" width="600" height="700"></iframe>
-         -->
+
        </div>
           </div>  
-          </section>
+          </section> -->
             <!-- <table width="595">
                 <tbody>
                 <tr>
